--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ p, h1, h2, h3, h4, h5, h6 {
     --primary-light-red: hsl(0, 100%, 63%);
     --neutral-very-dark-cyan: hsl(192, 100%, 9%);
     --neutral-very-pale-blue: hsl(207, 100%, 98%);
-    /* Text */
+    /* Text - Poppins is for headings - SansSerif is for body*/
     --ff-poppins: 'Poppins', sans-serif;
     --fw-poppins: 700;
     --ff-sansserif: 'Open Sans', sans-serif;
@@ -38,3 +38,78 @@ p, h1, h2, h3, h4, h5, h6 {
     --fw-ss-semibold: 600;
     --fw-ss-bold: 700;
 }
+
+/* General styling */
+body {
+    font-family: var(--ff-sansserif);
+}
+
+/* Styles */
+
+/* ==========Navigation bar========== */
+.nav-bar {
+    padding: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.main-logo {
+    max-width: 6rem;
+    height: auto;
+}
+
+.try-it {
+    text-decoration: none;
+    color: var(--primary-light-pink);
+    border: 1px solid var(--primary-pink);
+    font-size: 0.65rem;
+    padding: 0.313rem 1rem;
+    border-radius: 3rem;
+    box-shadow: 0px 0px 5px 0px var(--primary-light-pink);
+}
+
+/* ==========Header========== */
+.header {
+    padding: 5.5rem 1.5rem;
+    text-align: center;
+    display: grid;
+    gap: 3rem;
+    place-items: center;
+}
+
+.header-content {
+    display: grid;
+    gap: 1.5rem;
+}
+
+.header-title {
+    font-family: var(--ff-poppins);
+    color: var(--neutral-very-dark-cyan);
+    font-size: 1.5rem;
+}
+
+.header-description {
+    color: var(--neutral-very-dark-cyan);
+    font-weight: var(--fw-ss-semibold);
+    font-size: 0.85rem;
+    padding: 0 1rem;
+    line-height: 1.5;
+}
+
+.header-button {
+    background-color: var(--primary-pink);
+    color: white;
+    text-decoration: none;
+    font-weight: var(--fw-ss-semibold);
+    font-size: 0.75rem;
+    padding: 0.7rem 2.5rem;
+    width: max-content;
+    border-radius: 2rem;
+    box-shadow: 0px 1px 5px -2px black;
+}
+
+.header-img {
+    padding: 3.5rem 1rem;
+}
+
