modified:   index.html 	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ p, h1, h2, h3, h4, h5, h6 {
     --primary-light-red: hsl(0, 100%, 63%);
     --neutral-very-dark-cyan: hsl(192, 100%, 9%);
     --neutral-very-pale-blue: hsl(207, 100%, 98%);
+    --neutral-light-gray: hsl(220, 2%, 69%);
     /* Text - Poppins is for headings - SansSerif is for body*/
     --ff-poppins: 'Poppins', sans-serif;
     --fw-poppins: 700;
@@ -71,7 +72,7 @@ body {
 
 /* ==========Header========== */
 .header {
-    padding: 5.5rem 1.5rem;
+    padding: 5.5rem 1.5rem 3.5rem 1.5rem;
     text-align: center;
     display: grid;
     gap: 3rem;
@@ -111,5 +112,43 @@ body {
 
 .header-img {
     padding: 3.5rem 1rem;
+}
+
+/* ==========Main========== */
+.main-containter {
+  
+}
+
+/* ==========Statistic section========== */
+.statistic {
+  text-align: center;
+  display: grid;
+  place-items: center;
+  gap: 5rem;
+  padding: 1.5rem 1.5rem;
+}
+
+.community,
+.message {
+  display: grid;
+  gap: 0.2rem;
+  width: max-content;
+}
+
+.community-img,
+.message-img {
+  max-width: 1.75rem;
+}
+
+.community-number,
+.message-number {
+  color: var(--neutral-very-dark-cyan);
+  font-size: 3.65rem;
+}
+
+.community-description,
+.message-description {
+  color: var(--neutral-light-gray);
+  font-size: 0.9rem;
 }
 
