--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ body {
   display: grid;
   place-items: center;
   gap: 5rem;
-  padding: 1.5rem 1.5rem;
+  padding: 1.5rem;
 }
 
 .community,
@@ -402,4 +402,76 @@ body {
 
 .social i {
   font-size: 1.5rem;
+}
+
+
+/* ==========Desktop design========== */
+@media screen and (min-width: 1440px) {
+
+  /* ==========Navigation bar========== */
+  .nav-bar {
+    padding: 5em;
+  }
+
+  .main-logo {
+    max-width: 15rem;
+  }
+
+  .try-it {
+    font-size: 1rem;
+    padding: 0.45rem 1.5rem;
+    font-weight: var(--fw-ss-semibold);
+  }
+
+  /* ==========Header========== */
+  .header {
+    padding: 9.5rem 1.5rem 2.5rem 1.5rem;
+  }
+  
+  .header-title {
+    font-size: 3rem;
+  }
+
+  .header-description {
+    font-size: 1.25rem;
+    padding: 0 23rem;
+  }
+
+  .header-button {
+    font-size: 1.3rem;
+    padding: 1.5rem 6rem;
+    border-radius: 2.5rem;
+  }
+
+  /* ==========Statistic section========== */
+  .statistic {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20rem;
+  }
+
+  .community-img,
+  .message-img {
+  max-width: 3rem;
+  }
+  
+  .community-number,
+  .message-number {
+  font-size: 6rem;
+  }
+
+  .community-description,
+  .message-description {
+  font-size: 1.5rem;
+  }
+
+  .message-description {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+  }
+
+  /* ==========Grow together========== */
 }
